# icu4x

benchmarks/memory/macos-latest/: data.js
benchmarks/memory/ubuntu-latest/: data.js
benchmarks/memory/windows-latest/: data.js
benchmarks/perf/components/datetime/: data.js
benchmarks/perf/components/locid/: data.js
benchmarks/perf/components/plurals/: data.js
benchmarks/perf/components/uniset/: data.js
benchmarks/perf/utils/fixed_decimal/: data.js
components/segmenter/: Cargo.toml
components/segmenter/benches/: bench.rs
components/segmenter/src/: lib.rs  line_breaker.rs  lstm.rs
components/segmenter/tests/: css_line_break.rs  css_word_break.rs  spec_test.rs
dev/components/datetime/: data.js
dev/components/locid/: data.js
dev/components/plurals/: data.js
dev/components/uniset/: data.js
dev/utils/fixed_decimal/: data.js
